// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`deserialize bodybox block 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "kind": "document",
    "nodes": Array [
      Object {
        "data": Object {},
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "kind": "text",
            "ranges": Array [
              Object {
                "kind": "range",
                "marks": Array [],
                "text": "test",
              },
            ],
          },
        ],
        "type": "bodybox",
      },
    ],
  },
  "kind": "state",
}
`;

exports[`deserialize footnote 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "kind": "document",
    "nodes": Array [
      Object {
        "data": Object {},
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "kind": "text",
            "ranges": Array [
              Object {
                "kind": "range",
                "marks": Array [],
                "text": "",
              },
            ],
          },
          Object {
            "data": Object {
              "authors": Array [
                "Jony Ive",
              ],
              "edition": "2",
              "publisher": "Apple",
              "resource": "footnote",
              "title": "Apple Watch",
              "type": "",
              "year": "2015",
            },
            "isVoid": false,
            "kind": "inline",
            "nodes": Array [
              Object {
                "kind": "text",
                "ranges": Array [
                  Object {
                    "kind": "range",
                    "marks": Array [],
                    "text": "#",
                  },
                ],
              },
            ],
            "type": "footnote",
          },
          Object {
            "kind": "text",
            "ranges": Array [
              Object {
                "kind": "range",
                "marks": Array [],
                "text": "",
              },
            ],
          },
          Object {
            "data": Object {
              "authors": Array [
                "Steve Jobs",
                "Jony Ive",
              ],
              "edition": "1",
              "publisher": "Apple",
              "resource": "footnote",
              "title": "iPhone",
              "type": "",
              "year": "2007",
            },
            "isVoid": false,
            "kind": "inline",
            "nodes": Array [
              Object {
                "kind": "text",
                "ranges": Array [
                  Object {
                    "kind": "range",
                    "marks": Array [],
                    "text": "#",
                  },
                ],
              },
            ],
            "type": "footnote",
          },
          Object {
            "kind": "text",
            "ranges": Array [
              Object {
                "kind": "range",
                "marks": Array [],
                "text": "",
              },
            ],
          },
        ],
        "type": "paragraph",
      },
    ],
  },
  "kind": "state",
}
`;

exports[`deserializing any heading becomes heading-two 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "kind": "document",
    "nodes": Array [
      Object {
        "data": Object {},
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "kind": "text",
            "ranges": Array [
              Object {
                "kind": "range",
                "marks": Array [],
                "text": "heading 1",
              },
            ],
          },
        ],
        "type": "heading-two",
      },
      Object {
        "data": Object {},
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "kind": "text",
            "ranges": Array [
              Object {
                "kind": "range",
                "marks": Array [],
                "text": "heading 2",
              },
            ],
          },
        ],
        "type": "heading-two",
      },
      Object {
        "data": Object {},
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "kind": "text",
            "ranges": Array [
              Object {
                "kind": "range",
                "marks": Array [],
                "text": "heading 3",
              },
            ],
          },
        ],
        "type": "heading-two",
      },
      Object {
        "data": Object {},
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "kind": "text",
            "ranges": Array [
              Object {
                "kind": "range",
                "marks": Array [],
                "text": "heading 4",
              },
            ],
          },
        ],
        "type": "heading-two",
      },
      Object {
        "data": Object {},
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "kind": "text",
            "ranges": Array [
              Object {
                "kind": "range",
                "marks": Array [],
                "text": "heading 5",
              },
            ],
          },
        ],
        "type": "heading-two",
      },
      Object {
        "data": Object {},
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "kind": "text",
            "ranges": Array [
              Object {
                "kind": "range",
                "marks": Array [],
                "text": "heading 6",
              },
            ],
          },
        ],
        "type": "heading-two",
      },
    ],
  },
  "kind": "state",
}
`;

exports[`serialize bodybox block 1`] = `
<div
  className="c-bodybox"
>
  <p>
    test
  </p>
</div>
`;

exports[`serialize embed block 1`] = `
<embed
  data-caption="test"
/>
`;

exports[`serialize footnote 1`] = `
<embed
  data-authors="Jony Ive"
  data-edition="4"
  data-publisher="Apple"
  data-title="Apple Watch"
  data-type="product"
  data-year="2015"
/>
`;
